<resources>
    <string name="app_name">Home Workout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercise_gif">EXERCISE GIF</string>
    <string name="add_your_weight">ADD YOUR WEIGHT</string>
    <string name="workout">workout</string>
    <string name="schedule">schedule</string>
    <string name="progress">progress</string>
    <string name="previous"><![CDATA[< previous]]></string>
    <string name="complete">complete</string>
    <string name="skip"><![CDATA[skip >]]></string>
    <string name="start">start</string>
    <string name="completed">completed</string>
    <string name="empty"> </string>
    <string name="add_workout">ADD WORKOUT</string>
    <string name="plane_workout">plane workout</string>
    <string name="date_format">d-M-yyyy</string>
    <string name="workout_icon">workout icon</string>
    <string name="go_to_detail">GO TO DETAIL</string>
    <string name="close">CLOSE</string>
    <string name="plan_workout_caps">PLAN WORKOUT</string>
    <string name="delete">DELETE</string>
    <string name="time_format">%02d:%02d:%02d</string>
    <string name="exercise_count_format">%02d/%02d</string>
    <string name="workout_completed">WORKOUT COMPLETED!</string>
    <string name="count_of_workout_completed">WORKOUTS COMPLETED: %s</string>
    <string name="user_s_photo">USER\'S PHOTO</string>
    <string name="enter_your_weight">ENTER YOUR WEIGHT (KG)</string>
    <string name="add">ADD</string>
    <string name="set_date">SET DATE</string>
    <string name="weight_format">%s KG</string>
    <string name="edit">EDIT</string>
    <string name="weight">WEIGHT</string>
    <string name="your_weight">YOUR WEIGHT</string>
    <string name="follow_your_progress_here">FOLLOW YOUR PROGRESS HERE</string>
    <string name="add_your_current_info_to_show_chart">ADD YOUR CURRENT INFO TO SHOW CHART</string>
    <string name="date_wasnt_selected">DATE WASN\'T SELECTED</string>
    <string name="weight_wasnt_entered">WEIGHT WASN\'T ENTERED</string>
    <string name="your_photo">YOUR PHOTO</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="welcome">WELCOME :)</string>
    <string name="web_client_id">303570052925-8tkf09ut72pjefdg4ifin63jmanif46s.apps.googleusercontent.com</string>
    <string name="profile">profile</string>
    <string name="user_photo">USER PHOTO</string>
    <string name="user_name">USER NAME</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="workout_deleted">WORKOUT HAS BEEN DELETED</string>
    <string name="workout_planned">WORKOUT PLANNED</string>
    <string name="date_wasnt_selectedd">DATE WASN\'T SELECTED</string>
    <string name="added_scfly">ADDED SUCCESSFULLY</string>
    <string name="updated_scfly">UPDATED SUCCESSFULLY</string>
    <string name="deleted_scfly">DELETED SUCCESSFULLY</string>
    <string name="comleted_planned_workout">YOU HAVE JUST COMPLETED PLANNED WORKOUT</string>
    <string name="login_locally">LOGIN LOCALLY</string>
    <string name="user_isnt_signed">USER IS NOT SIGNED IN</string>
    <string name="splash_icon">Splash Icon</string>
    <string name="permissions_werenot_granted">PERMISSIONS WERE NOT GRANTED</string>
    <string name="features_without_permissions">WITHOUT PERMISSIONS SOME FEATURES CAN\'T BE USED</string>
    <string name="changes_not_found">NO CHANGES FOUND</string>
    <string name="athlete">Athlete</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="network_connection_available">Network Connection: Available</string>
    <string name="network_connection_unavailable">Network Connection: Unavailable</string>
    <string name="network_connection_lost">Network Connection: Lost</string>
    <string name="network_connection_losing">Network Connection: Losing</string>
    <string name="failed_with_google">FAILED TO LOG IN WITH GOOGLE</string>
</resources>