<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screens.training_screen.TrainingFragment">

    <ImageView
        android:id="@+id/iv_exercise_gif"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/exercise_gif"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:background="@color/crimson"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/tv_exercise_detail"
        app:layout_constraintEnd_toStartOf="@id/tv_exercise_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_exercise_gif"
        tools:text="20X" />

    <TextView
        android:id="@+id/tv_exercise_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/tv_exercise_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_reps"
        app:layout_constraintTop_toBottomOf="@id/iv_exercise_gif"
        tools:text="PUSH UP" />

    <TextView
        android:id="@+id/tv_exercise_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/ll_nav_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reps"
        tools:text="EXECUTE PUSH UPS SLOWLY STRAINING YOUR ABS" />

    <LinearLayout
        android:id="@+id/ll_nav_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/previous"
            android:textColor="@color/crimson"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_completed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/complete"
            android:textColor="@color/crimson"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="@string/skip"
            android:textColor="@color/crimson"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>